--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-photo-album": "^2.3.1"
+    "react-photo-album": "^2.3.1",
+    "react-slideshow-image": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
